# Gigabrot

./: .gitignore  CMakeLists.txt  README.md  newMan.c  parallelMan.c  stripedMan.c
C/: CMakeLists.txt  originalStriped.c  parallelStriped.c
C++/: CMakeLists.txt  Colorization.cpp  Colorization.h  InsideColor.cpp  InsideColor.h  LineColor.cpp  LineColor.h  Mandelbrot.cpp  Mandelbrot.h  MandelbrotConfigAbstract.cpp  MandelbrotConfigAbstract.h  Neumorphic.cpp  Neumorphic.h  NormalMap.cpp  NormalMap.h  PGM.cpp  PGM.h  PPM.cpp  PPM.h  Shading.cpp  Shading.h  Striping.cpp  Striping.h  ThreadPool.h  main.cpp
C-stuff/: CMakeLists.txt  newMan.c  originalStriped.c  parallelMan.c  parallelStriped.c
CUDA-stuff/Gigabrot/: Gigabrot.vcxproj  kernel.cu
CUDA-stuff/Gigabrot/x64/Debug/: Gigabrot.exe.recipe  Gigabrot.exp  Gigabrot.ilk  Gigabrot.lib  kernel.cu1652964177.deps
CUDA-stuff/Gigabrot/x64/Debug/Gigabrot.tlog/: CudaCompile.read.1u.tlog  Gigabrot.lastbuildstate  Gigabrot.write.1u.tlog  link.read.1.tlog  link.write.1.tlog
CUDA/Gigabrot/: Gigabrot.sln
CUDA/Gigabrot/x64/Debug/: Gigabrot.exp  Gigabrot.vcxproj.FileListAbsolute.txt
CUDA/Gigabrot/x64/Debug/Gigabrot.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog
output/: test.ppm
